# sensai-dataset

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
examples/: pandas.ipynb  tangram.ipynb  toxic-chat-classification-using-lstm.ipynb  transformers.ipynb
notebooks/: playground.ipynb
sensai_dataset/: dataset.py
sensai_dataset/generator/: __main__.py  commands.py  constants.py
sensai_gen/: cli.py  constants.py
