[tool.poetry]
name = "sensai-dataset"
version = "1.0.0"
description = "Toxic Live Chat Dataset"
authors = ["Yasuaki Uechi <y@uechi.io>"]

[tool.poetry.dependencies]
python = "^3.8"
datasets = {git = "https://github.com/huggingface/datasets.git", rev = "master"}
#datasets = "^1.11.0"
pyarrow = "^5.0.0"

[tool.poetry.dev-dependencies]
pymongo = "^3.11.3"
transformers = "^4.10.0"
torch = "^1.9.0"
tokenizers = "^0.10.3"
kaggle = "^1.5.12"
pandas = "^1.2.3"
python-dateutil = "^2.8.1"
ipykernel = "^6.2.0"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
